--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "test": "nyc mocha test/* --recursive",
+    "test": "mocha test/*",
     "start": "node ./bin/www"
   },
   "dependencies": {
